--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pkg-resources==0.0.0
 Pygments==2.3.0
 pymdown-extensions==6.0
 PySocks==1.6.8
+python-dotenv==0.10.1
 PyYAML==3.13
 requests==2.21.0
 requests-oauthlib==1.0.0
