--- a/Documentation/mkdocs.yml
+++ b/Documentation/mkdocs.yml
@@ -10,3 +10,4 @@ nav:
     - "Analizando las redes Wifi": vulnerabilities.md
     - "Cracking de  redes Wifi": crackingWifi.md
     - "Explorando la red interna": networkAttack.md
+    - "POC: Inyectando Javscript Malicioso": javascript.md
