--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ MarkupSafe==1.1.0
 mkdocs==1.0.4
 mkdocs-material==3.1.0
 oauthlib==2.1.0
-pkg-resources==0.0.0
+#pkg-resources==0.0.0
 Pygments==2.3.0
 pymdown-extensions==6.0
 PySocks==1.6.8
