--- a/Documentation/mkdocs.yml
+++ b/Documentation/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: Hacking Doméstico
+site_name: Seguridad en redes domésticas
 site_author: 'Héctor Romero <i72roloh@uco.es>'
-site_description: 'Vulnerabilidades presentes en el entorno doméstico'
+site_description: 'Análisis de las vulnerabilidades presentes en un entorno doméstico'
 theme:
     name: "material"
 
@@ -13,7 +13,7 @@ nav:
     - "Cracking de  redes Wifi": crackingWifi.md
     - "Atacando la red interna": networkAttack.md
     - "POC: Inyectando Javascript Malicioso": javascript.md
-    
+
 markdown_extensions:
     - footnotes: ~
     - admonition: ~
@@ -23,5 +23,5 @@ markdown_extensions:
     - toc:
         permalink: true
     - def_list: ~
-    
+
 dev_addr: '0.0.0.0:8000'
