--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-mkdocs
-mkdocs-material
-mkdocs-pandoc
+Click==7.0
+Jinja2==2.10
+livereload==2.6.0
 Markdown==3.0.1
-markdown-inline-graphviz
+MarkupSafe==1.1.1
+mkdocs==1.0.4
+mkdocs-material==4.0.2
+pkg-resources==0.0.0
+Pygments==2.3.1
+pymdown-extensions==6.0
+PyYAML==3.13
+six==1.12.0
+tornado==6.0
